# prompter

./: .env.example  .gitignore  CLAUDE.md  ENHANCED_NOTIFICATIONS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_COMPLETE.md  Makefile  PYQT5_MIGRATION.md  README.md  api.py  check_migration.py  demo_notification_queue.py  main.py  open_ai_api.py  pyproject.toml  requirements.txt  test_enhanced_notifications.py  test_menu_fix.py  test_pyqt.py  test_subprocess_notifications.py
app/: __init__.py  application.py  pyqt_application.py
core/: __init__.py  context_manager.py  exceptions.py  interfaces.py  models.py  open_ai_api.py  openai_service.py  placeholder_service.py  services.py
gui/: __init__.py  context_menu.py  hotkey_manager.py  menu_coordinator.py  pyqt_context_menu.py  pyqt_hotkey_manager.py  pyqt_menu_coordinator.py
modules/context/: context_menu_provider.py
modules/custom_promp_store/: README.MD  api.py  prompt_execeution_handlers.py
modules/gui/: __init__.py  base_dialog.py  context_editor_dialog.py  context_menu.py  context_menu_macos.py  context_widgets.py  conversation_manager.py  conversation_tab_bar.py  dialog_styles.py  (+13 more)
providers/: __init__.py  execution_handlers.py  local_prompt_provider.py  menu_providers.py  prompt_providers.py  pyqt_execution_handlers.py  settings_menu_provider.py  settings_prompt_provider.py
scripts/: setup.sh
settings/: settings.json
settings_example/: settings.json
tests/: conftest.py  test_message_share_dialog.py
utils/: __init__.py  clipboard.py  config.py  notifications.py  pyqt_notifications.py  system.py
(+93 files in other folders)
