[project]
name = "promptheus"
version = "1.0.0"
description = "A powerful context menu application for AI prompts"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "json5",
    "PySide6>=6.4.0",
    "pynput>=1.7.6",
    "Pillow>=8.0.0",
    "sounddevice>=0.4.6",
    "numpy>=2.3.1",
    "openai>=2.15.0",
]

[project.optional-dependencies]
macos = ["pyobjc-framework-Cocoa>=9.0"]
linux = ["python-xlib>=0.33"]
dev = ["pytest>=7.0.0", "pytest-qt>=4.0.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "core*", "modules*"]
