[project]
name = "promptheus"
version = "1.0.0"
description = "A powerful context menu application for AI prompts"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "json5>=0.13.0",
    "PySide6>=6.10.1",
    "pynput>=1.8.1",
    "Pillow>=12.1.0",
    "sounddevice>=0.5.3",
    "numpy>=2.4.1",
    "openai>=2.15.0",
]

[project.optional-dependencies]
macos = ["pyobjc-framework-Cocoa>=12.1"]
linux = ["python-xlib>=0.33"]
dev = ["pytest>=9.0.2", "pytest-qt>=4.5.0"]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "core*", "modules*"]
